2015-11-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15479]
	[BZ #19238]
	* sysdeps/powerpc/powerpc32/fpu/s_round.S (__round): Save
	floating-point state after first operation on input.  Restore full
	state rather than just rounding mode.
	* sysdeps/powerpc/powerpc32/fpu/s_roundf.S (__roundf): Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_round.S (__round): Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_roundf.S (__roundf): Likewise.

	[BZ #19235]
	* sysdeps/powerpc/powerpc64/fpu/s_llround.S (__llround): Do not
	add 0.5 to integer arguments.
	* sysdeps/powerpc/powerpc64/fpu/s_llroundf.S (__llroundf):
	Likewise.
	(.LC2): New object.

2015-11-11  Mike Frysinger  <vapier@gentoo.org>

	* scripts/pylintrc (reports): Set to no.

2015-11-10  Roland McGrath  <roland@hack.frob.com>

	* elf/dl-load.c (open_verify): Take new argument FD.
	Skip __open call if passed FD is not -1.
	(_dl_map_object, open_path): Update callers.
	* elf/dl-sysdep-open.h: New file.
	* elf/dl-load.c: Include it.
	(_dl_map_object): Try _dl_sysdep_open_object before ldconfig cache.
	* sysdeps/nacl/dl-sysdep.c (_dl_sysdep_open_object): New function.
	* sysdeps/nacl/dl-sysdep-open.h: New file.
	* sysdeps/nacl/nacl-interface-list.h: Move nacl_irt_resource_open
	from libc to rtld.

2015-11-10  Joseph Myers  <joseph@codesourcery.com>

	[BZ #19228]
	* sysdeps/powerpc/powerpc32/fpu/s_nearbyint.S (__nearbyint): Save
	and restore full floating-point state.
	* sysdeps/powerpc/powerpc32/fpu/s_nearbyintf.S (__nearbyintf):
	Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_nearbyint.S (__nearbyint):
	Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_nearbyintf.S (__nearbyintf):
	Likewise.
	* math/test-nearbyint-except-2.c: New file.
	* math/Makefile (tests): Add test-nearbyint-except-2.

2015-11-10  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #19178]
	* sysdeps/x86/Makefile (tests): Add tst-prelink.
	(tst-prelink-ENV): New.
	($(objpfx)tst-prelink-conflict.out): Likewise.
	($(objpfx)tst-prelink-cmp.out): Likewise.